# BasicFastAPI_Day2

./: Day1_Note.md  Day2_Note.md
fastapi-db/: .env  pyproject.toml
fastapi-db/app/: main.py
fastapi-db/app/api/: deps.py
fastapi-db/app/api/v1/: api.py
fastapi-db/app/core/: config.py
fastapi-db/app/services/: user_service.py
my_fastapi/: pyproject.toml
my_fastapi/src/: app.py  crud.py
