[project]
name = "fastapi-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "fastapi>=0.126.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "scalar-fastapi>=1.5.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
